Adding a paragraph on beam window in cryostat section

--- a/cryo.tex
+++ b/cryo.tex
@@ -38,7 +38,27 @@ Figure~\ref{fig:fardet-overview} shows a 3D view of the detector inside the cryo
 The beam window design is still being worked on and may lead to minor modifications if
 any of the current boundaries conditions listed above is violated.
   
-%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Discussion on preliminary beam window design ( C. Lin)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Multiple beam windows will be installed along the horizontal midplane
+on the upstream side of the LAr cryostat to allow particle beam to
+enter the active TPC volume with minimal energy loss and scattering.
+To simplify the mechanical design, we are exploring installing
+multiple modular beam windows as opposed to a single monolithic beam
+window. Each beam window will be identical in design and has a nominal
+circular cross section of about 20 cm in diameter. The window will be
+installed into a frame. The frame is assembled into the cryostat wall
+by the vendor at time of fabrication, and includes seals to both
+primary and secondary membranes. Inside the LAr volume, there will low
+density "plugs" to displace the passive volume of LAr along the beam
+path length before the active TPC volume. The window design and
+configuration have not been finalized. There will likely be three or
+more beam windows installed on the cryostat to allow the beam to enter
+the cryostat at different locations and angles. Windows not being used
+for the active beam configuration will be covered by exterior flanges
+for safety.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The cryostat has an inner volume of 483 m$^3$ and can contain  673 tons of LAr.
 %
@@ -112,7 +132,7 @@ Design temperature   &  77 K (liquid nitrogen temperature for flexibility) \\ \h
 Temperature of all surfaces in the ullage during operation   & \textless 100 K  \\ \hline
 Leak tightness   & $10^{-6}$ mbar*l/sec   \\ \hline
 Maximum noise/vibration/microphonics inside the cryostat   & LAr pump outside the cryostat  \\ \hline
-Beam window   & Precise location TBD. Figure~XXX shows the location where the beam enters the cryostat.  \\ \hline
+Beam window   & Precise location TBD. Multiple beam windows installed on the upstream side of the cryostat  \\ \hline
  Accessibility after operations  & Capability to empty the cryostat in 30 days and access it in 60 days after the end of operations. \\ \hline
   Lifetime / Thermal cycles &  Consistent with liquid argon program. TBD. \\ \hline
  \end{tabular}
