Moving the beam window text to after the top cap discussion

--- a/cryo.tex
+++ b/cryo.tex
@@ -38,27 +38,6 @@ Figure~\ref{fig:fardet-overview} shows a 3D view of the detector inside the cryo
 The beam window design is still being worked on and may lead to minor modifications if
 any of the current boundaries conditions listed above is violated.
   
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Discussion on preliminary beam window design ( C. Lin)
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Multiple beam windows will be installed along the horizontal midplane
-on the upstream side of the LAr cryostat to allow particle beam to
-enter the active TPC volume with minimal energy loss and scattering.
-To simplify the mechanical design, we are exploring installing
-multiple modular beam windows as opposed to a single monolithic beam
-window. Each beam window will be identical in design and has a nominal
-circular cross section of about 20 cm in diameter. The window will be
-installed into a frame. The frame is assembled into the cryostat wall
-by the vendor at time of fabrication, and includes seals to both
-primary and secondary membranes. Inside the LAr volume, there will low
-density "plugs" to displace the passive volume of LAr along the beam
-path length before the active TPC volume. The window design and
-configuration have not been finalized. There will likely be three or
-more beam windows installed on the cryostat to allow the beam to enter
-the cryostat at different locations and angles. Windows not being used
-for the active beam configuration will be covered by exterior flanges
-for safety.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The cryostat has an inner volume of 483 m$^3$ and can contain  673 tons of LAr.
 %
@@ -72,7 +51,8 @@ The support structure will rest on I-beams to allow for air circulation undernea
 \begin{itemize}
 \item steel outer supporting structure,
 \item main body of the membrane cryostat (sides and floor), 
-\item top cap of the membrane cryostat.
+\item top cap of the membrane cryostat,
+\item beam windows.
 \end{itemize}
 %
 A membrane cryostat design commonly used for liquefied natural gas (LNG) storage and transportation will be used. In this vessel a stainless steel membrane contains the liquid cryogen. The pressure loading of the liquid cryogen is transmitted through rigid foam insulation to the surrounding outer support structure, which provides external support. The membrane is corrugated to provide strain relief resulting from temperature related expansion and contraction. The vessel is completed with a top cap that uses the same technology.
@@ -265,6 +245,29 @@ Lifetime / Thermal cycles  & Consistent with the liquid argon program TBD. \\ \h
 \caption{Design parameters for the top of the cryostat}
 \label{tbl:cryostat-top-parameters}
 \end{table}
+
+\textbf{Beam windows:}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Discussion on preliminary beam window design ( C. Lin)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Multiple beam windows will be installed along the horizontal midplane
+on the upstream side of the LAr cryostat to allow particle beam to
+enter the active TPC volume with minimal energy loss and scattering.
+To simplify the mechanical design, we are exploring installing
+multiple modular beam windows as opposed to a single monolithic beam
+window. Each beam window will be identical in design and has a nominal
+circular cross section of about 20 cm in diameter. The window will be
+installed into a frame. The frame is assembled into the cryostat wall
+by the vendor at time of fabrication, and includes seals to both
+primary and secondary membranes. Inside the LAr volume, there will low
+density "plugs" to displace the passive volume of LAr along the beam
+path length before the active TPC volume. The window design and
+configuration have not been finalized. There will likely be three or
+more beam windows installed on the cryostat to allow the beam to enter
+the cryostat at different locations and angles. Windows not being used
+for the active beam configuration will be covered by exterior flanges
+for safety.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \textbf{Cryostat grounding and isolation requirements:}
 %
