--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -43,7 +43,8 @@
 \begin{document}
 \linenumbers
 
-\title{  Proposal for a Engineering Test and Beam Calibration of a Full-Scale Single-Phase Liquid Argon Time Projection Chamber}
+%\title{  Proposal for a Engineering Test and Beam Calibration of a Full-Scale Single-Phase Liquid Argon Time Projection Chamber}
+\title{Proposal for a Full-Scale Single-Phase Liquid Argon Time Projection Chamber and Detector Beam Test at CERN}
 
 \date{\today}
 %\date{April 15, 2015}
