small editorial changes

--- a/execsum.tex
+++ b/execsum.tex
@@ -2,16 +2,15 @@
 The DUNE experiment will use a large liquid argon (LAr) detector to measure the CP violating phase, determine the neutrino mass hierarchy and perform precision tests of the three-flavor paradigm in long-baseline neutrino oscillations. The detector will consist of four modules 
 each with a fiducial volume of 10~kt of LAr and due to its unprecedented size will allow sensitive searches for proton decay and the detection and measurement of electron neutrinos from core collapse supernovae \cite{dunecdr}.
 
-The first 10~kt module will use single phase LAr detection technique and be itself modular in design. The successful manufacturing, installation and operation of several full scale detector components in a suitable configuration represents a critical engineering milestone prior to the construction and operation of the full 10~kt DUNE detector module at the SURF underground site. A charged particle beam directed at such
-a prototype detector provides invaluable precision information on systematic detector uncertainties. These measurements will ultimately
-contribute to improve the physics reach of the DUNE experiment and comparable information cannot be gained in-situ with the future DUNE detector at its underground location.
+The first 10~kt module will use single phase LAr detection technique and be itself modular in design. The successful manufacturing, installation and operation of several full scale detector components in a suitable configuration represents a critical engineering milestone prior to the construction and operation of the first full 10~kt DUNE detector module at the SURF underground site. A charged particle beam directed at such a prototype detector provides invaluable precision information on systematic detector uncertainties. These measurements will ultimately
+contribute to improve the physics reach of the DUNE experiment. Comparably detailed information cannot be gained in-situ with the future DUNE detector at its underground location.
 
 Following the positive response from the SPSC to our EoI \cite{eoi} for such a prototype detector and beam test, we have defined the detector parameters and outlined a beam measurement program which allows us to achieve these critical DUNE milestones.
-
+%
 We propose to construct and operate a LBNE style single phase LAr detector with an active (total) LAr detector mass of 400~t (700~t). 
 The active LAr region measures 7.2 (width) $\times$ 7.0 (length) $\times$ 5.9~m$^3$ (height) on its sides.
-The detector components will be identical to what is foreseen for the first 10~kt DUNE detector. The design incorporates the
-experience gained over many years of R\&D, in particular it follows many aspects demonstrated in the 35~t prototype detector at Fermilab.
+The detector components will be identical to what is foreseen for the first 10~kt DUNE detector module. The design incorporates the
+experience gained over many years of R\&D, in particular it benefits in many aspects from the 35~t prototype detector at Fermilab.
 
 The beam should provide different types of negatively and positively charged primary particles with 
 sub-GeV to several GeV in energy.
@@ -20,7 +19,7 @@ is expected to last several weeks and should ideally be conducted prior to the s
 long shutdown of the LHC in 2018. 
 
 The DUNE collaboration has identified the CERN single phase prototype detector and beam test as a logical and critically important next
-step towards its ultimate goal of building and running the DUNE experiment \cite{dunecdr}. The anticipated proximity to and synergies with WA105 enhances collaboration and is expected to foster community building. It leads to direct detector performance comparison of single and double phase LAr data in a well characterized test environment. 
+step towards its ultimate goal of building and running the DUNE experiment \cite{dunecdr}. The anticipated proximity to and synergies with WA105 enhances collaboration and is expected to foster community building. We plan to work towards a direct detector performance comparison of single and double phase LAr data in this well characterized test environment. 
 %
 A strong, experienced and growing team within the DUNE collaboration is in place to carry out the proposed activities.
 
