--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -32,7 +32,6 @@ $\delta_{CP}$ phase.
 \centering
 %\includegraphics[width=0.7\textwidth,height=7.7cm]{figures/lepbias10}
 \includegraphics[width=0.7\textwidth,height=7.7cm]{figures/CSPP_LeptonBias_nue_app_FHC}
-\label{fig:spectraleffect}
   \caption{DUNE $\nu_e$ appearance signal and background spectra. 
 Solid curves show the effect of -5\% lepton energy scale shift on the 
 measured appearance $\nu_e$ and $\overline{\nu}_e$ signals assuming $\delta_{CP}=0$.
@@ -40,6 +39,7 @@ The crosses show the expected signal shape for $\delta_{CP}=+\pi/2$ (lower cross
 Ratios show the distortion on the $\nu_e$ and $\overline{\nu}_e$ spectra due to the 
 5\% energy scale shift.
 }
+\label{fig:spectraleffect}
 \end{figure}
 
 
@@ -56,7 +56,7 @@ The exposure to achieve this level of sensitivity corresponds to
 %details of the LBNF neutrino beam design.
 %exposure with equal neutrino and antineutrino running. 
 Work to evaluate the effect of all systematic uncertainties in DUNE sensitivities is still in progress.
-This study already indicates a signficant reduction of the CPV peak sensitivity. 
+This study already indicates a significant reduction of the CPV peak sensitivity due to a lepton energy scale uncertainty. 
 This example assumes linear neutrino energy scale variations at the levels indicated.
 More complex (and more likely) scenarios for energy scale uncertainties are under study and
 will likely result in larger effects on the sensitivities.
@@ -73,7 +73,6 @@ will likely result in larger effects on the sensitivities.
 \includegraphics[width=0.49\textwidth,height=6.7cm]{figures/cpv_890ktmwyear_varyesyst}
 %\includegraphics[width=0.49\textwidth,height=6.7cm]{figures/mh_escale_sens}
 %\includegraphics[width=0.49\textwidth,height=6.7cm]{figures/deltacp_escale_sens}
-\label{fig:global_escale_sens}
   \caption{One scenario for the effect of 1-sigma  neutrino energy scale uncertainties on
 DUNE projected sensitivity for mass hierarchy (left) and $\delta_{CP}$ 
 (right).
@@ -83,6 +82,7 @@ A 115 kt-MW-years exposure in each of neutrino and antineutrino modes is assumed
 %at least 5$\sigma$ sensitivity on mass hierarchy determination for 100\% of $\delta_{CP}$ values and
 %for 3$\sigma$ sensitivity to  $\delta_{CP}$ for 75\% coverage of phase space.
 }
+\label{fig:global_escale_sens}
 \end{figure}
 
 %Current levels of sensitivity in ~\cite{dunecdr} assumes
@@ -118,7 +118,7 @@ in the sub-GeV to few-GeV range provided by charged-particle test beams.
 %\label{detbeam_particles}
 The DUNE experiment will run in both neutrino and anti-neutrino 
 configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig.~\ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from 
-simulated beam fluxes, including oscillation effects, are shown. The particle rates are normalised  to the number of neutrino interactions in the DUNE far detector and for the neutrino beam.
+simulated beam fluxes, including oscillation effects, are shown. The particle rates are normalized  to the number of neutrino interactions in the DUNE far detector and to the neutrino beam flux.
 % In addition the electron rates from charged current interactions for muon neutrinos oscillated to electron neutrinos are shown. 
 \begin{figure}[h!]
   \centering
@@ -142,14 +142,14 @@ from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ form the neutrino mode 
 
 %\newpage
 
-The detector is designed from components that match exactly the current DUNE reference far detector design components. 
+The CERN prototype detector is designed from components that match exactly the DUNE far detector reference design for the first 10~kt detector module.
 The test beam detector must be sufficiently large in both
 longitudinal and transverse dimensions to contain showering particles up to the energy range of interest ($\sim$10~GeV).
 Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse 
 energy containment for proton showers up to 10~GeV in energy.
 For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 6~m and 
 radius of 2.5~m. Showers from pions, kaons, and electrons have also been studied and similar or better containment
-is achieved in those cases. 
+is achieved in those cases and for the above detector dimensions.
 \begin{figure}[htp]
   \centering
   \begin{tabular}{ccc}
@@ -210,27 +210,27 @@ required sample sizes for the test beam program.
 \hline
 Particle & Momenta (GeV/c) & Sample & Purpose \\ 
  &  &  Size &  \\ \hline \hline
-$\pi^+$       & 0.2, 0.3, 0.4, 0.5, 0.7, 1, 2, 3, 5, 7     &  10K  & hadronic cal, $\pi^0$ content \\ \hline
-$\pi^-$       &  0.2, 0.3, 0.4, 0.5, 0.7, 1     &  10K  & hadronic cal, $\pi^0$ content \\ \hline
-$\pi^+$   &  2  &  600K & $\pi^o$/$\gamma$ sample \\ \hline
+$\pi^+$       & 0.2, 0.3, 0.4, 0.5, 0.7, 1, 2, 3, 5, 7     &  10k  & hadronic cal, $\pi^0$ content \\ \hline
+$\pi^-$       &  0.2, 0.3, 0.4, 0.5, 0.7, 1     &  10k  & hadronic cal, $\pi^0$ content \\ \hline
+$\pi^+$   &  2  &  600k & $\pi^o$/$\gamma$ sample \\ \hline
 %$\pi^+$ &   1 \& 2  &  10K  & vary angle ($\times$5), reco \\ \hline
-proton &  0.7, 1, 2, 3   &  10K & response, PID \\ \hline
+proton &  0.7, 1, 2, 3   &  10k & response, PID \\ \hline
 proton &  1   &  1M & mis-ID pdk, recombination \\ \hline
-e$^+$ or e$^-$       &    0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7        &    10K   & e-$\gamma$ separation/EM shower     \\ \hline
+e$^+$ or e$^-$       &    0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7        &    10k   & e-$\gamma$ separation/EM shower     \\ \hline
 % e$^+$ or e$^-$  &  1 \& 2  &  10K  & vary angle($\times$5), reco \\ \hline
 %e$^+$ or e$^-$   (w/rad) &  3  &  20K  & tagged photons \\ \hline
-$\mu^-$  &   (0.2), 0.5, 1, 2  &  10K & $E_\mu$, charge sign \\ \hline
-$\mu^+$ &   (0.2), 0.5, 1, 2   &  10K & $E_\mu$, Michel el.,charge sign  \\ \hline
-$\mu^-$ or $\mu^+$ &   3, 5, 7  &  5K & $E_\mu$ MCS \\ \hline
+$\mu^-$  &   (0.2), 0.5, 1, 2  &  10k & $E_\mu$, charge sign \\ \hline
+$\mu^+$ &   (0.2), 0.5, 1, 2   &  10k & $E_\mu$, Michel el.,charge sign  \\ \hline
+$\mu^-$ or $\mu^+$ &   3, 5, 7  &  5k & $E_\mu$ MCS \\ \hline
 %$\mu^-$ or $\mu^+$  &  1 \& 2  &  5K  & vary angle ($\times$5), reco \\ \hline
 %proton &  1 \& 2 &  10K & vary angle ($\times$5), reco \\ \hline
 antiproton &  low-energy tune  &  (100) & antiproton stars \\ \hline
-K$^+$  & 1 & (13K)   &   response, PID, PDK  \\ \hline
-K$^+$  & 0.5, 0.7 & (5K)   &   response, PID, PDK  \\ \hline \hline
-$\mu$, e, proton  & 1 (vary angle $\times$5) & 10K  & reconstruction  \\ \hline
+K$^+$  & 1 & (13k)   &   response, PID, PDK  \\ \hline
+K$^+$  & 0.5, 0.7 & (5k)   &   response, PID, PDK  \\ \hline \hline
+$\mu$, e, proton  & 1 (vary angle $\times$5) & 10k  & reconstruction  \\ \hline
 \end{tabular}
 \caption{Requirements summary for particle types and momenta.
-The Exposure column indicates the number of particles for each momentum point.
+The sample size column indicates the number of particles for each momentum point.
 Items in parenthesis indicate lower priority (see text).
 }
 \label{tab:runsum}
@@ -238,15 +238,15 @@ Items in parenthesis indicate lower priority (see text).
 
 
 Pions and protons spanning the energy range expected in DUNE beam neutrino interactions will be used 
-primarily to study hadronic showering reconstruction and calibration as described in Sec.~\ref{sec:showers}
- as well as particle identification (PID) algorithms discussed in Sec.~\ref{detbeam_pid}. A sample of 600K
+primarily to study hadronic shower reconstruction and calibration as described in Sec.~\ref{sec:showers}
+ as well as particle identification (PID) algorithms discussed in Sec.~\ref{detbeam_pid}. A sample of 600k
  2~GeV $\pi^+$ will be used to study  secondary $\pi^o$ over a large angular range 
 to tune and calibrate electron/photon separation algorithms (see Sec.~\ref{sec_egam}).
-A large sample (10$^{6}$) 1 GeV protons will produce a sample of low energy stopping protons over a 
+A large sample (10$^{6}$) 1 GeV protons represents a sample of low energy stopping protons over a 
 wide angular range needed to study angular
 dependent effects on collected charge as described in Sec.~\ref{sec_angle}.
 Electrons will be used to benchmark and tune  electron/photon separation algorithms and to calibrate 
-electromagnetic showers as discussed in \ref{sec_egam}.
+electromagnetic showers as discussed in Sec. \ref{sec_egam}.
 Muon (and antimuon) samples are needed to study reconstruction and PID calibration as well as to obtain 
 Michel electron events for calibration  
 algorithms for charge-sign determination (see Secs.\ref{sec_reco} and \ref{sec_other}).
@@ -270,7 +270,8 @@ in Sec.~\ref{sec_other}.
 
 \subsection{Detector physics validation tests}
 
-The prototype detector will allow to study the detector response to charge particles from the test beam. The measured energy deposition for various particles and its dependence on the direction of the particle will be used to tune
+%The prototype detector will allow to study the detector response to charge particles from the test beam. 
+The measured energy deposition for various particles and its dependence on the direction of the particle will be used to tune
 Monte Carlo simulations and allow improvements to reconstruction of neutrino energy and interaction topologies. % with good particle identification.
 
 
@@ -311,7 +312,6 @@ large uncertainties from shower modeling.
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_3gev_v0}
 \includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr1GeV_1}
 \includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr3GeV_1}
-\label{fig:hadronshwr}
   \caption{Fraction of true energy deposited by interacting protons of 1~GeV/c (left) and
 3~GeV/c (right) momenta simulated using FLUKA~\cite{fluka05}.
 }
@@ -596,10 +596,11 @@ on incoming particle energy in the range of interest.
 Our studies indicate that rejection and efficiency depend 
 on particular features of the geometry including wire pitch and plane 
 orientation which affect the reconstruction. 
-For example, a comparison of signal efficiencies for a simulated 
-DUNE APA configuration and with the ICARUS T600 geometry
+For example, a preliminary comparison of signal efficiencies for a simulated 
+DUNE APA configuration with the ICARUS T600 geometry
 and averaged over the energy range 0.2-1.0 GeV shows 
 a 10\% higher efficiency for the 3~mm wire spacing used in ICARUS.
+The study does not yet include electron diffusion.
 %
 Pure samples of electrons and photons in the sub-GeV energy range will be
 needed to tune the separation algorithms and to measure 
@@ -617,7 +618,7 @@ detector-dependent electron-photon separation efficiency and purity.
 \subsection{Other measurements} 
 \label{sec_other}
 
-The DUNE experiment will be capable of addressing other physics beyond the flagship long-baseline neutrino measurements with the unique massive underground LAr TPC. Event samples discussed here include those that support this rich array of additional physics goals.
+The DUNE experiment will be capable of addressing other physics beyond the long-baseline neutrino measurements with the unique massive underground LAr TPC. Event samples discussed here include those that support this rich array of additional physics goals.
 %The DUNE experiment will be capable of addressing other new physics possibilities with its one-of-a-kind
 %massive underground LAr TPC. Event samples discussed here include those that support DUNE
 %rich array of other physics goals. 
@@ -631,7 +632,8 @@ few-to-30-MeV range $\nu_e$'s.
 The test beam cannot offer a sample of  such low energy electrons, but Michel electrons  produced by 
 decaying stopped muons is ideal to calibrate electron response in the appropriate 10-50~MeV energy range. 
 The requested sample of low energy muons will supply the 1400 Michel electrons required for a 1\% 
-calibration of electrons in this energy range. 
+calibration of electrons in this energy range. This sample can be compared to a similar Michel electron sample
+stemming from stopping cosmic muons.
 
 %\begin{table}[h]
 %\centering
@@ -662,7 +664,7 @@ appropriate momentum range (500-800 MeV/c). The kaon samples requested in Table~
 $K^+$ PID and detection efficiency. 
 
 Obtaining low energy kaons will likely be difficult in this beamline.
-A sample of 13K beam kaons with 1~GeV/c momentum are requested to provide 2K stopping $K^+$ track samples for PID studies.
+A sample of 13k beam kaons with 1~GeV/c momentum are requested to provide 2k stopping $K^+$ track samples for PID studies.
 (only 15\% of $K^+$ stop at 1~GeV/c).
 
 
