change K -> k in kilo

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -81,12 +81,12 @@ The muon beam halo counters is a set of detectors (e.g. plastic scintillator pad
 
 
 \subsection{Beam Rates and Run Plan}
-At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100K 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distributions of the tertiary particles from the copper target are shown in Figure~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the right is for negatively charged tertiary particles. 
+At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100k 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distributions of the tertiary particles from the copper target are shown in Figure~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the right is for negatively charged tertiary particles. 
 
 \begin{figure}[tbh]
   \centering
 \includegraphics[scale=0.47]{figures/80GeVPion-15cmCuTarget.jpg}
-  \caption{Simulation of 100K 80 GeV $\pi^+$ on 15 cm copper target. The figure on the left is for positively charged and the figure on the right is for negatively charged secondary particles from the target. }
+  \caption{Simulation of 100k 80 GeV $\pi^+$ on 15 cm copper target. The figure on the left is for positively charged and the figure on the right is for negatively charged secondary particles from the target. }
 \label{fig:PionOnCuTarget}
 \end{figure}
 
@@ -101,17 +101,17 @@ To formulate a preliminary beam time request, we assume the hadron beam rates an
 \bf $P$ & \bf $\#$ of Spills & \bf Time & \bf $\#$ of $\pi^+$ & \bf$\#$ of $\mu^+$ & \bf$\#$ of $K^+$ & \bf$\#$ of p \\ 
 \bf (GeV)& & \bf (hours) & & & & \\ \hline
 \hiderowcolors
-0.2&900 &11&\textcolor{red}{\bf 15K} &180K&$\approx$0&160K\\ 
-0.3&200 &3 &\textcolor{red}{\bf 15K} &30K &$\approx$0&50K \\
-0.4&150 &\textcolor{red}{\bf 2} &22K &18K &$\approx$0&32K \\ 
-0.5&150 &\textcolor{red}{\bf 2} &26K &12K &$\approx$0&38K \\
-0.7&150 &\textcolor{red}{\bf 2} &40K &10K &$\approx$0&45K \\
-1  &350 &4 &120K&\textcolor{red}{\bf 10K} &$\approx$0&65K \\
-2  &600 &8 &320K&\textcolor{red}{\bf 10K} &3K        &130K\\
-3  &500 &6 &290K &\textcolor{red}{\bf 5K} &7K        &70K \\
-5  &1800&23& 1M &\textcolor{red}{\bf 5K}  &5K        &270K\\
-7  &1200&15&660K&\textcolor{red}{\bf 6K}  &3K        &120K\\ \hline
-Total &6000&76&2.5M  & 286K  &18K   & 1M\\
+0.2&900 &11&\textcolor{red}{\bf 15k} &180k&$\approx$0&160k\\ 
+0.3&200 &3 &\textcolor{red}{\bf 15k} &30k &$\approx$0&50k \\
+0.4&150 &\textcolor{red}{\bf 2} &22k &18k &$\approx$0&32k \\ 
+0.5&150 &\textcolor{red}{\bf 2} &26k &12k &$\approx$0&38k \\
+0.7&150 &\textcolor{red}{\bf 2} &40k &10k &$\approx$0&45k \\
+1  &350 &4 &120k&\textcolor{red}{\bf 10k} &$\approx$0&65k \\
+2  &600 &8 &320k&\textcolor{red}{\bf 10k} &3k        &130k\\
+3  &500 &6 &290k &\textcolor{red}{\bf 5k} &7k        &70k \\
+5  &1800&23& 1M &\textcolor{red}{\bf 5k}  &5k        &270k\\
+7  &1200&15&660k&\textcolor{red}{\bf 6k}  &3k        &120k\\ \hline
+Total &6000&76&2.5M  & 286k  &18k   & 1M\\
 \hline \hline
 \multicolumn{7}{|c|}{\bf Negative Sample} \\ \hline
 \showrowcolors 
@@ -122,14 +122,14 @@ Total &6000&76&2.5M  & 286K  &18K   & 1M\\
 \multicolumn{2}{|>{\columncolor[gray]{0.83}}c|}{}& 
 \multicolumn{2}{|>{\columncolor[gray]{0.83}}c|}{} \\ \hline  
 \hiderowcolors
-0.2&600&8&\multicolumn{2}{|c|}{\textcolor{red}{\bf 15K}} &\multicolumn{2}{|c|}{88K}\\
-0.3&200&3&\multicolumn{2}{|c|}{\textcolor{red}{\bf 15K}} &\multicolumn{2}{|c|}{30K}\\
-0.4&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{30K} &\multicolumn{2}{|c|}{18K}\\
-0.5&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{40K} &\multicolumn{2}{|c|}{13K}\\
-0.7&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{50K} &\multicolumn{2}{|c|}{12K}\\
-1  &150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{70K} &\multicolumn{2}{|c|}{12K}\\
-2  &200&3&\multicolumn{2}{|c|}{135K}&\multicolumn{2}{|c|}{\textcolor{red}{\bf 6K}}\\ \hline
-Total  &1600&22&\multicolumn{2}{|c|}{350K}&\multicolumn{2}{|c|}{180K}\\ 
+0.2&600&8&\multicolumn{2}{|c|}{\textcolor{red}{\bf 15k}} &\multicolumn{2}{|c|}{88k}\\
+0.3&200&3&\multicolumn{2}{|c|}{\textcolor{red}{\bf 15k}} &\multicolumn{2}{|c|}{30k}\\
+0.4&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{30k} &\multicolumn{2}{|c|}{18k}\\
+0.5&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{40k} &\multicolumn{2}{|c|}{13k}\\
+0.7&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{50k} &\multicolumn{2}{|c|}{12k}\\
+1  &150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{70k} &\multicolumn{2}{|c|}{12k}\\
+2  &200&3&\multicolumn{2}{|c|}{135k}&\multicolumn{2}{|c|}{\textcolor{red}{\bf 6k}}\\ \hline
+Total  &1600&22&\multicolumn{2}{|c|}{350k}&\multicolumn{2}{|c|}{180k}\\ 
 \hline 
 \hline
 \multicolumn{7}{|c|}{\bf Electron Sample} \\ \hline
@@ -138,7 +138,7 @@ Total  &1600&22&\multicolumn{2}{|c|}{350K}&\multicolumn{2}{|c|}{180K}\\
 \multicolumn{3}{|>{\columncolor[gray]{0.83}}c|}{\bf (GeV)} & &\multicolumn{2}{|>{\columncolor[gray]{0.83}}c|}{\bf (hours)}&\\
 \hline
 \hiderowcolors
-\multicolumn{3}{|c|}{0.2,0.3,0.4,0.5,0.7,1,2,3,5,7}  & 150 per bin & \multicolumn{2}{|c|}{2 hours per bin} &{140K per bin} \\ \hline
+\multicolumn{3}{|c|}{0.2,0.3,0.4,0.5,0.7,1,2,3,5,7}  & 150 per bin & \multicolumn{2}{|c|}{2 hours per bin} &{140k per bin} \\ \hline
 \multicolumn{3}{|c|}{Total}  & 1500 & \multicolumn{2}{|c|}{20} &{1.4M} \\ \hline
 \end{tabular}
 \caption{A preliminary run plan for one beam angle and position. The number of spills needed for a given momentum bin is driven by the samples highlighted in red or by the requirement of at least 150 spills per momentum bin.}
