--- a/cryo.tex
+++ b/cryo.tex
@@ -259,7 +259,7 @@ window. Each beam window will be identical in design and has a nominal
 circular cross section of about 20 cm in diameter. The window will be
 installed into a frame. The frame is assembled into the cryostat wall
 by the vendor at time of fabrication, and includes seals to both
-primary and secondary membranes. Inside the LAr volume, there will low
+primary and secondary membranes. Inside the LAr volume, there will be low
 density "plugs" to displace the passive volume of LAr along the beam
 path length before the active TPC volume. The window design and
 configuration have not been finalized. There will likely be three or
