Moved comsic event calculation to calibration from computing and added reference in computing

--- a/calibration.tex
+++ b/calibration.tex
@@ -49,8 +49,7 @@ to measure the position of the laser beam.
 
 The {\bf cosmic muon detector} system serves as an alternative tool to the laser calibration system. Cosmic rays with energies of a few GeV 
 have nearly uniform dE/dx in liquid argon with about 2~MeV/cm and generate about 18,000 electrons. % in the 3 mm wire space. 
-For a TPC of the proposed dimensions and surface operation, about 20 cosmic muons are expected in every event. 
-Muon detectors are planned to be installed to preferentially measure cosmic rays passing nearly horizontally through the cryostat.
+Given standard values quoted for the cosmic ray muon flux at sea level, we arrive at a number of roughly 200 incident muons per square meters per second.  Taking into account the dimensions of the TPC, we estimate the area of the top face of its rectangular volume to be just over 50~m$^{2}$, which means that the detector will be subject to $\sim10^{4}$ particles per second.  The full electron drift time in liquid argon for a 3.6~m drift length is 2.25~ms, and each readout window for an event will contain three drift time windows which will include data from drift windows before and after the event.  Based on the cosmic rate and the size of the readout window, there is expected to be on average $\sim$68 track segments on top of the actual beam event.  This estimate takes into account the readout of charge that may still be drifting from the window just prior to the triggered one and the loss of charge that is still drifting after the triggered window ends.    Muon detectors are planned to be installed to preferentially measure cosmic rays passing nearly horizontally through the cryostat.
 Additional muon counters on top of the cryostat will allow tagging of highly inclined muons and veto of vertical muons. 
   A disadvantage of using muons as a calibration tool compared to a laser beam is that muons could scatter multiple times in passing 
   through more than 7 meters of liquid argon and will therefore not be perfectly straight anymore.
