--- a/APA-CP-FieldCage.tex
+++ b/APA-CP-FieldCage.tex
@@ -48,7 +48,7 @@ The FR4 sheets on the CPAs are treated with layers of high resistive coating on 
 
 %Due to the relatively high cosmic ray flux in this surface detector, it is preferable to prevent the scintillation light emitted by a cosmic ray between the cathode and cryostat wall from entering the TPC to reduce false trigger. The opaque cathode surface will service this purpose. 
 
-The high flux of cosmic rays combined with very low drift velocity of positive ions in the liquid argon will result in sizable space charge distortions in the TPC \cite{spacecharge}.  In addition, the positive ions could build up further if the ion motion is slowed or stalled by counter flow in the LAr.  Preliminary CFD analysis \cite{CFD} have shown that solid cathodes in the cryostat result in LAr flow pattern that neither causes excess positive ion buildup, nor degrades the LAr purity.
+The high flux of cosmic rays combined with very low drift velocity of positive ions in the liquid argon will result in non-negligible space charge distortions in the TPC \cite{spacecharge}.  In addition, the positive ions could build up further if the ion motion is slowed or stalled by counter flow in the LAr.  Preliminary CFD analysis \cite{CFD} have shown that solid cathodes in the cryostat result in LAr flow pattern that neither causes excess positive ion buildup, nor degrades the LAr purity.
 
 
 \begin{figure}[t]
@@ -59,7 +59,7 @@ The high flux of cosmic rays combined with very low drift velocity of positive i
 \end{figure}
 
 To achieve a 500~V/cm drift field over a 3.6~m distance, the bias 
-voltage on the cathode plane must reach $-$180~kV. One high voltage power supply (150 -- 200 kV) and one HV feedthrough will be needed for the cathode plane.  The HV feedthroughs are based on the ICARUS design, but modified to further improve the stability at higher voltages. %(Fig.~\ref{fig:tpc_hv_ft}).
+voltage on the cathode plane must reach $-$180~kV. One high voltage power supply (150 -- 200 kV) and one HV feedthrough will be needed for the cathode plane.  The HV feedthroughs are based on the ICARUS design, but are modified to further improve the stability at higher voltages. %(Fig.~\ref{fig:tpc_hv_ft}).
 
 %\begin{figure}[hb]
 %\centering
