change SensL B to C series

--- a/photondetector.tex
+++ b/photondetector.tex
@@ -20,7 +20,7 @@ The present reference design for the photon detection system is based on acrylic
 %   with a conversion efficiency of ~50\% \cite{conversion-eff}
 to longer wavelength photons which are characterized by an emission spectrum with a peak wavelength of 430~nm.
 About 50\% of the converted photons will be emitted into the bar.
-  A fraction of the wavelength-shifted optical photons are internally reflected to the bar's end where they are detected by SiPMs whose QE curve is well matched to the 430 nm wavelength-shifted photons. All PD prototypes are currently using SensL MicroFB-6K-35-SMT 6 mm $\times$ 6 mm devices \cite{sensl}. 
+  A fraction of the wavelength-shifted optical photons are internally reflected to the bar's end where they are detected by SiPMs whose QE curve is well matched to the 430 nm wavelength-shifted photons. All PD prototypes are currently using SensL MicroFC-6K-35-SMT 6 mm $\times$ 6 mm devices \cite{sensl}. 
 
 A full 6 m long APA will be divided into 5 bays with 2 PD modules (paddles) instrumenting each bay. The paddles will be inserted into the frames after the TPC wires have been strung allowing  final assembly at the CERN test location. Two alternative designs are also under consideration. 
 
