--- a/bibliography.tex
+++ b/bibliography.tex
@@ -8,7 +8,7 @@
 %cites from detbeamtest
 %
 
-\bibitem{dunecdr} DUNE CDR -- ADD LINK HERE
+\bibitem{dunecdr} DUNE CDR  \url{https://web.fnal.gov/project/LBNF/ReviewsAndAssessments/CD-1Preparation/SitePages/CDR\%20and\%20Annex\%20Drafts.aspx}
 
 \bibitem{eoi} SPSC-EOI-011 
 
