--- a/bibliography.tex
+++ b/bibliography.tex
@@ -8,9 +8,9 @@
 %cites from detbeamtest
 %
 
-\bibitem{dunecdr} DUNE CDR  \url{https://web.fnal.gov/project/LBNF/ReviewsAndAssessments/CD-1Preparation/SitePages/CDR\%20and\%20Annex\%20Drafts.aspx}
+\bibitem{dunecdr} DUNE CDR,  \url{https://web.fnal.gov/project/LBNF/ReviewsAndAssessments/CD-1Preparation/SitePages/CDR\%20and\%20Annex\%20Drafts.aspx}
 
-\bibitem{eoi} SPSC-EOI-011 
+\bibitem{eoi} SPSC-EOI-011, \url{http://cds.cern.ch/record/1953730/files/SPSC-EOI-011.pdf?version=1}
 
 \bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
 
